--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">ayush.sharma@tbs-education.org</a>
+									<a href="#">team@escargoairship.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
